crates/jolt_java_fmt/tests/snapshots/corpus__style__program__removes_top_level_semicolons.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class A {
}

diagnostics:
(none)
