crates/jolt_java_fmt/tests/snapshots/corpus__style__program__top_level_blank_lines.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class First {
}

class Second {
}

diagnostics:
(none)
