crates/jolt_java_fmt/tests/snapshots/corpus__style__program__unsupported_branded_ignore.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
// prettier-ignore
// jolt-ignore
class Raw {
  int x = 1 + 2;
}

diagnostics:
(none)
